# inventory4ce

./: .gitignore  Dockerfile  README.md  build.sh  compose.yaml  flake.nix  pip.conf  pyproject.toml  requirements.txt
QRCodes/: OldQueue.txt  Queue.txt
inventory4ce/: app.py
inventory4ce/static/css/: bootstrap.css  bootstrap.min.css  error.css  livesearch.css  style.css
inventory4ce/static/js/: buttons.js  cookies.js  fontawesome.js  livesearch.js  main.js  navigation.js  spinner.js  webrtc.js
inventory4ce/templates/: Data.html  Error.html  Framework.html  Inventory.html  Main.html  ModifiedTaskBox.html  QRCodeSite.html  TaskBox.html  Test.html  User.html  UserBox.html
inventory4ce/web/: Generator.py  Inventory.py  Message.py  QRCode.py  User.py  get_value.py
