[tool.poetry]
name = "inventory4ce"
version = "1.0.0"
description = ""
authors = ["Kalauerclub <aramark@gmx.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.28.2"
brother-ql = "^0.9.4"
qrcode = "^7.4.2"
pyopenssl = "^23.2.0"

[tool.poetry.scripts]
intenvory4ce = "inventory4ce.app:run"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
